--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
   padding: 48px;
 
   position: fixed;
+  width: 100%;
   background-color: #09090a;
 }
 
@@ -57,9 +58,7 @@ button {
 .habit {
   width: 64px;
   height: 64px;
-
   font-size: 32px;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -79,13 +78,10 @@ button {
 
 .day div {
   margin-bottom: 8px;
-
   font-family: 'Roboto Mono';
   font-size: 20px;
   line-height: 125%;
-
   color: #A1A1AA;
-
   text-align: center;
 }
 
@@ -98,7 +94,6 @@ input {
 
   border: 2px solid #27272A;
   border-radius: 8px;
-
   background: #18181B;
 }
 
